--- a/code/example-telegraf.conf
+++ b/code/example-telegraf.conf
@@ -13,7 +13,7 @@
   client_id = "telegraf"
   qos = 0
   connection_timeout = "30s"
-  topics = [ "humidity", "temperature", "brightness" ] 
+  topics = [ "+/devices/#" ]
   username = "User_name" #Change
   password = "Password" #Change
   data_format = "value"
